# forgesyte-plugins

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  QWEN.md  README.md  TODO_BASE64_GUARDRAIL.md  add_precommit_to_dev.patch  check_all.sh  enforce_plugin_roots.py  maintain_clean_plugin_structure.patch  mypy.ini  package.json  pyproject.toml  requirements.txt  tsconfig.json  validate_manifest.py  vitest.config.ts  vitest.setup.ts
block_mapper/: README.md  pyproject.toml
block_mapper/forgesyte_block_mapper/: plugin.py
block_mapper/ui/: ResultRenderer.tsx
moderation/: pyproject.toml
moderation/forgesyte_moderation/: plugin.py
motion_detector/: pyproject.toml
motion_detector/forgesyte_motion/: plugin.py
motion_detector/tests/: test_plugin.py
motion_detector/ui/: ResultRenderer.tsx
ocr/: README.md  pyproject.toml
ocr/forgesyte_ocr/: plugin.py
ocr/tests/: test_plugin.py
ocr/ui/: ConfigForm.test.tsx  ConfigForm.tsx  ResultRenderer.tsx  plugin.json
plugin_template/: README.md  pyproject.toml
plugin_template/forgesyte_plugin_template/: plugin.py
plugin_template/tests/: __init__.py  test_plugin.py
plugins/block_mapper/: pyproject.toml
plugins/block_mapper/src/forgesyte_block_mapper/: plugin.py
plugins/block_mapper/src/tests/: conftest.py  test_plugin.py
plugins/block_mapper/web-ui/: ResultRenderer.test.tsx  plugin.json
plugins/forgesyte-yolo-tracker/: LICENSE  MYPY_ISSUES.md  Makefile  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini
plugins/forgesyte-yolo-tracker/src/forgesyte_yolo_tracker/: __init__.py  manifest.json  plugin.py  tracking.py
plugins/forgesyte-yolo-tracker/src/forgesyte_yolo_tracker/configs/: __init__.py  models.yaml  soccer.py
plugins/forgesyte-yolo-tracker/src/forgesyte_yolo_tracker/inference/: __init__.py  _base_detector.py  ball_detection.py  pitch_detection.py  player_detection.py  player_tracking.py  radar.py  team_classification.py
plugins/forgesyte-yolo-tracker/src/forgesyte_yolo_tracker/models/: football-ball-detection-v2.pt  football-pitch-detection-v1.pt  football-player-detection-v3.pt
plugins/forgesyte-yolo-tracker/src/forgesyte_yolo_tracker/utils/: __init__.py  annotators.py  ball.py  common.py  json_sanitize.py  soccer_pitch.py  summary.py  team.py  test_ball.py  tracking.py  (+2 more)
plugins/forgesyte-yolo-tracker/src/tests/: conftest.py  test_base_detector.py  test_class_mapping.py  test_config_models.py  test_config_soccer.py  test_inference_ball_detection.py  test_inference_ball_detection_refactored.py  test_inference_mocked.py  test_inference_pitch_detection.py  test_inference_pitch_detection_refactored.py  test_inference_player_detection.py  test_inference_player_detection_refactored.py  test_inference_player_tracking.py  test_inference_radar.py  test_inference_team_classification.py  test_manifest.py  test_model_files.py  test_models_directory_structure.py  test_plugin.py  test_plugin_all_detections.py  test_plugin_edge_cases.py  test_plugin_schema.py  test_plugin_tool_methods.py  test_video_model_paths.py
plugins/forgesyte-yolo-tracker/tests/: test_base64_guardrail.py  test_float32_json_serialization.py  test_json_sanitize.py  test_manifest.py  test_player_detection.py  test_player_tracking.py  test_plugin.py  test_plugin_loading.py  test_plugin_output.py  test_team_classification.py  test_video_player_tracking_truth_value_error.py
plugins/forgesyte-yolo-tracker/tests/unit/: test_get_tracker_ids_none_handling.py  test_tracking.py
plugins/forgesyte-yolo-tracker/tests_contract/: __init__.py  conftest.py  test_base64_decode_contract.py  test_base_detector.py  test_class_mapping.py  test_default_tool_alias.py  test_input_contract.py  test_lifecycle_contract.py  test_manifest.py  test_manifest_contract.py  test_phase12_input_contract.py  test_plugin.py  test_plugin_dispatch.py  test_plugin_edge_cases.py  test_plugin_schema.py  test_plugin_schema_contract.py  test_plugin_tool_methods.py  test_tool_registry_contract.py  test_video_player_detection.py  test_video_tool_contract.py  test_video_tools.py
plugins/forgesyte-yolo-tracker/tests_heavy/: constants.py
plugins/forgesyte-yolo-tracker/tests_heavy/inference/: test_inference_ball_detection_refactored.py  test_inference_pitch_detection_refactored.py  test_inference_player_detection_refactored.py  test_inference_player_tracking.py  test_inference_player_tracking_refactored.py  test_inference_radar.py  test_inference_radar_refactored.py
plugins/forgesyte-yolo-tracker/tests_heavy/integration/: test_team_integration.py
plugins/forgesyte-yolo-tracker/tests_heavy/legacy/: test_config_models.py  test_config_soccer.py  test_model_files.py  test_models_directory_structure.py
plugins/forgesyte-yolo-tracker/tests_heavy/utils/: test_ball.py  test_soccer_pitch.py  test_team.py  test_team_model.py  test_team_prediction.py  test_view.py
plugins/forgesyte-yolo-tracker/tests_heavy/video/: test_video_model_paths.py
plugins/forgesyte-yolo-tracker/web-ui/: ConfigForm.test.tsx  ConfigForm.tsx  ResultRenderer.test.tsx  ResultRenderer.tsx  plugin.json
plugins/forgesyte-yolo-tracker/web-ui/components/: BoundingBoxOverlay.test.tsx  BoundingBoxOverlay.tsx  PlayerTrail.test.tsx  PlayerTrail.tsx  RadarView.test.tsx  RadarView.tsx
plugins/moderation/: README.md  conftest.py  pyproject.toml
plugins/moderation/src/forgesyte_moderation/: plugin.py
plugins/moderation/src/tests/: test_plugin.py
plugins/moderation/web-ui/: ResultRenderer.test.tsx  ResultRenderer.tsx  plugin.json
plugins/motion_detector/: README.md  pyproject.toml
plugins/motion_detector/src/forgesyte_motion/: plugin.py
plugins/motion_detector/src/tests/: test_plugin.py
plugins/motion_detector/web-ui/: ResultRenderer.test.tsx  ResultRenderer.tsx  plugin.json
plugins/plugin_template/: README.md  pyproject.toml
plugins/plugin_template/src/forgesyte_plugin_template/: manifest.json  plugin.py
plugins/plugin_template/src/tests/: __init__.py  confest.py  test_plugin.py
plugins/plugin_template/web-ui/: ConfigForm.test.tsx  ConfigForm.tsx  ResultRenderer.tsx  plugin.json
(+84 files in other folders)
