[project]
name = "forgesyte-motion-detector"
version = "1.0.0"
description = "Motion detection plugin for ForgeSyte"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.entry-points."forgesyte.plugins"]
motion_detector = "forgesyte_motion.plugin:Plugin"
