[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgesyte-block-mapper"
version = "1.0.0"
description = "Minecraft block mapping plugin for ForgeSyte"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "forgesyte @ git+https://github.com/rogermt/forgesyte.git",
]

[project.entry-points."forgesyte.plugins"]
block_mapper = "forgesyte_block_mapper.plugin:Plugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff",
    "isort",
    "mypy",
]

[tool.setuptools]
# Use src-layout so setuptools only scans ./src
package-dir = {"" = "src"}
packages = ["forgesyte_block_mapper"]

[tool.pytest.ini_options]
testpaths = ["src/forgesyte_block_mapper/tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true