[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgesyte-yolo-tracker"
version = "0.1.0"
description = "YOLO-based sports detection and tracking plugin for ForgeSyte"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ForgeSyte Contributors", email = "info@forgesyte.dev"}
]
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.0.0",
    "supervision>=0.20.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.0; python_version<'3.13'",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5.0; python_version<'3.13'"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black==24.1.1",
    "ruff==0.9.1",
    "mypy==1.14.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.0",
    "types-tqdm>=4.65.0",
]

[project.entry-points."forgesyte.plugins"]
yolo-tracker = "forgesyte_yolo_tracker.plugin:Plugin"

[tool.setuptools]
packages = ["forgesyte_yolo_tracker"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.coverage.run]
omit = [
    "src/forgesyte_yolo_tracker/inference/*",
    "src/forgesyte_yolo_tracker/video/*",
    "src/forgesyte_yolo_tracker/utils/*",
    "src/forgesyte_yolo_tracker/configs/*",
    "src/tests/*",
    "*/sitecustomize.py",
    "/etc/*",
    "/usr/*",
    "/tmp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
