[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgesyte-moderation"
version = "1.0.0"
description = "Moderation plugin for ForgeSyte"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.entry-points."forgesyte.plugins"]
moderation = "forgesyte_moderation.plugin:Plugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff",
    "isort",
    "mypy",
]

[tool.setuptools]
# Use src-layout so setuptools only scans ./src
package-dir = {"" = "src"}
packages = ["forgesyte_moderation"]

[tool.pytest.ini_options]
testpaths = ["src/forgesyte_moderation/tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true