[project]
name = "forgesyte-plugin-template"
version = "1.0.0"
description = "Template plugin for ForgeSyte"
dependencies = [
    "pydantic>=2.12.5",
    "forgesyte @ git+https://github.com/rogermt/forgesyte.git",
]

[project.entry-points."forgesyte.plugins"]
template_plugin = "forgesyte_plugin_template.plugin:Plugin"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black",
    "ruff",
]
